--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@
 #REDIS_NAMESPACE='preview-images'
 
 # Optional (for enable comment)
-#NOTION_API_KEY=
+NOTION_API_KEY=secret_eLCSalywo8uIggiLRommKfJXC95FpwhuCGbMpJb89nK
 
 # Optional (for enable GA)
 #NEXT_PUBLIC_GA_MEASUREMENT_ID
